--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,16 @@
 .read-the-docs {
   color: #888;
 }
+
+header {
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+form {
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 20px auto 0;
+}
