--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,9 @@
 }
 
 header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   top: 0;
   max-width: 1280px;
   min-width: 320px;
